fix: spacing and color (#2426)
* fix: spacing and color

* fix: spacing, icons

--- a/src/pages/settings/helpCenter/components/ConnectToShopSection/ConnectToShopSection.less
+++ b/src/pages/settings/helpCenter/components/ConnectToShopSection/ConnectToShopSection.less
@@ -3,6 +3,7 @@
         top: 50%;
         transform: translateY(-50%) !important;
         max-width: 600px;
+        color: var(--neutral-grey-6);
     }
 
     .select-option {
@@ -41,17 +42,14 @@
     }
 
     .store-name {
-        color: var(
-            --classic-neutral-grey-6,
-            var(--classic-neutral-grey-6, #1d365c)
-        );
+        color: var(--neutral-grey-6);
         font-weight: bold;
     }
 
     .selectStoreLabel {
         font-weight: 400;
         font-size: 14px;
-        margin-bottom: 8px;
+        margin-bottom: 16px;
     }
 
     .connectDescription {
@@ -65,5 +63,10 @@
 
     .alert {
         margin: 16px 0;
+    }
+
+    .buttonsWrapper {
+        display: flex;
+        gap: 8px;
     }
 }
